# swarmulator

./: .gitignore  Agent.cpp  Agent.h  CMakeLists.txt  LICENSE.md  StaticGrid.cpp  StaticGrid.h  agent.h  compile_commands.json  main.cpp  scratch
include/: util.h
shaders/: agent.vert  boid.comp  boid.vert  boids.comp  boids.vert  forage.vert  grid_pass1.comp  pd.vert  prefixsum.comp
src/: Simulation.cpp  Simulation.h  boids.cpp  boids_.cpp  boids_grid.cpp  boids_nogrid.cpp  continuous_forage.cpp  forage.cpp  main.cpp  pd.cpp  pred_prey.cpp  prisoners_dilemma.cpp
src/agent/: Agent.cpp  Agent.h  Boid.cpp  Boid.h  ForageAgent.cpp  ForageAgent.h  NeuralAgent.cpp  NeuralAgent.h  PDAgent.cpp  PDAgent.h  PredatorAgent.cpp  PredatorAgent.h  PreyAgent.cpp  PreyAgent.h  SimObject.cpp  SimObject.h
src/env/: Sphere.cpp  Sphere.h
src/objects/: Boid.cpp  ForageAgent.cpp  ForageAgent.h  ForageSource.h  NeuralAgent.cpp  NeuralAgent.h  PDAgent.cpp  PDAgent.h  PDWatcher.h  Plant.cpp  Plant.h  Prey.cpp  Prey.h
src/processing/: artifact_gen.py  forage_stats.py  loader.py  neighbor_count.py  observer.py  observer_metrics.py  observer_width_test.py  pipeline.txt  population.py  signals.py
src/shaders/: agent.frag  blue.vert  boid.vert  forage.vert  green.vert  neural.vert  pd.vert  prisoner.vert  red.vert  simobject.frag  simobject.vert
src/sim/: Logger.cpp  Logger.h  ObjectInstancer.cpp  ObjectInstancer.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h  StaticGrid.cpp  StaticGrid.h  dtypes.h  util.h
src/sim/logger/: LogTask.h  Logger.cpp  Logger.h  ThreadsafeQueue.h
src/util/: StaticGrid.cpp  StaticGrid.h  util.h
